<resources>
    <string name="app_name">FoodyClone</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favorite_recipes_fragment">Favorites</string>
    <string name="food_joke_fragment">Joke</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="drink">Drink</string>
    <string name="snack">Snack</string>
    <string name="finger_food">Finger Food</string>
    <string name="marinade">Marinade</string>
    <string name="sauce">Sauce</string>
    <string name="beverage">Beverage</string>
    <string name="soup">Soup</string>
    <string name="breakfast">Breakfast</string>
    <string name="bread">Bread</string>
    <string name="salad">Salad</string>
    <string name="appetizer">Appetizer</string>
    <string name="dessert">Dessert</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="low_fodmap">Low FODMAP</string>
    <string name="whole30">Whole30</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="cheap">Cheap</string>
    <string name="healthy">Healthy</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="save_to_favorites">Save to Favorites</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_favorite_recipes">No Favorite Recipes</string>
    <string name="delete_favorite_menu">Delete Favorite Menu</string>
    <string name="delete_all">Delete All</string>
    <string name="error">Error</string>
    <string name="share">Share</string>
</resources>